# StarWarsApp

./: .gitignore  LICENSE  README.md  build.sh
Android/: settings.gradle.kts
Android/app/: build.gradle.kts  proguard-rules.pro
Android/app/src/main/: AndroidManifest.xml
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
StarWars/Components/: Navigation.swift  SelectableRow.swift
StarWars/Details/: FilmDetailView.swift  PersonDetailView.swift  VehicleDetailView.swift
StarWarsApp.xcodeproj/project.xcworkspace/xcuserdata/willdale.xcuserdatad/: UserInterfaceState.xcuserstate
StarWarsApp.xcodeproj/xcshareddata/xcschemes/: StarWars.xcscheme
iOS/StarWars/: StarWarsApp.swift
iOS/StarWars/Components/: InfoRow.swift  SelectableRow.swift
iOS/StarWars/Details/: FilmDetailView.swift  HomeworldDetailView.swift  PersonDetailView.swift  PlanetDetailView.swift  SpeciesDetailView.swift  StarshipDetailView.swift  VehicleDetailView.swift
iOS/StarWars/Initial/: InitialSubviews.swift  InitialView.swift
iOS/StarWars/Networking/: SwiftHttpClient.swift
iOS/StarWars/Repository/: Repository.swift
iOS/StarWarsApp.xcodeproj/: project.pbxproj
iOS/StarWarsLibrary/: Package.swift
libstarwars/: Cargo.toml  build.sh  uniffi-bindgen-swift.rs  uniffi.toml
libstarwars/src/: api.rs  lib.rs  models.rs
libstarwars/src/api/: api_client.rs  api_error.rs  fetchable.rs  http_client.rs  interface.rs  list_items.rs  repository.rs  selected.rs
libstarwars/src/models/: films.rs  people.rs  planets.rs  species.rs  starships.rs  vehicles.rs
(+42 files in other folders)
