[package]
name = "starwars"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "starwars"

[dependencies]
uniffi = { version = "0.31.0", features = [ "cli" ] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
anyhow = "1.0.101"
async-trait = "0.1.89"

[build-dependencies]
uniffi = { version = "0.31.0", features = [ "build", "cli" ] }

[[bin]]
name = "uniffi-bindgen-swift"
path = "uniffi-bindgen-swift.rs"
